--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
                         <img src="img/ajax-spinner.gif" alt="ajax request animation" ng-if="inserting"/>
                     </div>
                 </form>
-                <!--  
-                put a form here for entering a new comment
-                the user must select a rating, and enter a name, title, and comment body
-                before the comment can be saved to the server
-                for the rating selection, use the Angular Bootstrap Rating directive 
-                http://angular-ui.github.io/bootstrap/#/rating
-                their script file is included below
-                -->
             </section>
 
             <section>
@@ -85,19 +77,13 @@
                         <p>
                             {{review.votes || 0}}
                             <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementVotes(review, 1)"></span>
-                            <span class="glyphicon glyphicon-thumbs-down" ng-click="rates = incrementVotes(review, -1)"></span>
+                            <span class="glyphicon glyphicon-thumbs-down" ng-click="incrementVotes(review, -1)"></span>
                         </p>
                         <p>
                             <span class="glyphicon glyphicon-remove" ng-click="deleteReview(review)"></span>
                         </p>
                     </li>
                 </ul>
-
-                <!-- 
-                display existing comments here
-                each comment should also have UI allowing the user to vote up/down the comment
-                as well as delete it
-                 -->
             </section>
 
         </main>
